1.3.0 ( rXXXX )
---------------

Require Java 1.5 or higher and Groovy 1.6 or higher.  Introduce generics and remove casts wherever sensible.

1.2.0 ( rXXXX )
---------------

Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
efficient cloning for multi-threading builds.


1.1.2 ( rXXXX )
---------------

Updated to using Ivy 2.0.0-beta2.

Corrected the bug that the Ivy tool was not operating in the correct namespace.  This removes the spurious
message: "Trying to override old definition of task buildnumber" that used to happen.
Refactored the IncludeTarget and IncludeTool classes to move replicated code into the common superclass
AbstractTool.


1.1.1 ( r9027 )
---------------

Added the Ivy and Maven Ant Tasks jars to the binary distribution.

Amend the Maven target set to add explicit specification of the source and test directories.  This applies
the Groovy joint compiler to everything in that directory, i.e. the Maven 2 split of language specific
directories is not applied.

Amended the Execute tool adding multi-threading of the process output streams to avoid blocking due to
overful buffers.  cf. GANT-22.  Altered return type of methods so as to return the return code of the
executed process. cf. GANT-23.

Add a new tool AntFile for reading an Ant XML file and presenting all the targets as targets in a Gant file.

Added a -L|--lib <directory-path> options in the same style as Ant's at the request of Adam DesJardin.
cf. GANT-24.

Added $HOME/.gant/lib as a repository of jar files as well as $HOME/.ant/lib.

Amended the depends processing to deal with lists of mixed Strings and Closures.

1.1.0 ( r8964 )
---------------

Added metadata to the Maven target set.

Updated the Ivy example a bit.  Switched to Ivy 2.0.0-beta-1.

Added a Gant Ant Task.  (For supporting continuous integration systems that insist on using Ant.)