@@ -9,6 +9,10 @@ Require Java 1.5 or higher and Groovy 1.6 or higher.  Introduce generics and rem
 Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
 efficient cloning for multi-threading builds.
 
+Remove the inserting of the class name for targets classes into the binding.  Change from Maven.<property>
+to maven.<property>.  This is a breaking change, all uses of Maven as a reference from teh binding must be
+replaced by maven.
+
 
 1.1.2 ( rXXXX )
 ---------------
